--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </header>
 
     <main>
+
+        <!-- Pop-Up Login -->
         <div class="container">
             <div class="item img1">
                 <img src="./Imagens/Everest.jpg" alt="Monte Everest">
@@ -94,5 +96,25 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <h1>Fotografia Gelada</h1>
+        <ul>
+            <li>
+                <a href="https://x.com/home"><img src="Icones/Twitter.svg" alt="Twitter"></a>
+            </li>
+            <li>
+                <a href="https://instagram.com/home"><img src="Icones/Instagram.svg" alt="Instagram"></a>
+            </li>
+            <li>
+                <a href="https://youtube.com/home"><img src="Icones/youtube.svg" alt="Youtube"></a>
+            </li>
+            <li>
+                <a href="https://tiktok.com/home"><img src="Icones/tiktok.svg" alt="TikTok"></a>
+            </li>
+        </ul>
+
+        <span>Copyright - 2025</span>
+    </footer>
 </body>
 </html>
