--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
     <main>
 
         <!-- Pop-Up Login -->
+        <div class="loginPopUp" id="loginPop">
+            <form id="formLogin">
+                <div class="headerPop">
+                    <h2>Login</h2>
+                </div>
+                <div class="inputsPop">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" id="usuario" required>
+                    <label for="password">Senha</label>
+                    <input type="password" required>
+                </div>
+                <div class="btnsPop">
+                    <button id="closePop">Cancelar</button>
+                    <button type="submit">Entrar</button>
+                </div>
+            </form>
+
+        </div>
+
         <div class="container">
             <div class="item img1">
                 <img src="./Imagens/Everest.jpg" alt="Monte Everest">
