--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <label for="usuario">Usuário</label>
                     <input type="text" id="usuario" required>
                     <label for="password">Senha</label>
-                    <input type="password" required>
+                    <input type="password"  id="password" required>
                 </div>
                 <div class="btnsPop">
                     <button id="closePop">Cancelar</button>
@@ -41,77 +41,114 @@
 
         </div>
 
+        <!-- PopUp Comentário -->
+
+        <div class="boxComment" id="boxComment">
+            <div class="headerComment">
+                <h2>Comentários</h2>
+                <img src="./Icones/x.svg" alt="X" id="closeComments">
+            </div>
+            <div class="imgBox">
+                <img src="" alt="Imagem Selecionada">
+            </div>
+            <div class="basicInfos">
+                <div class="likeBox">
+                    <img src="./Icones/coração.svg" alt="Like" class="like">
+                    <span>0</span>
+                    <span>Curtidas</span>
+                </div>
+                <div class="chatBox">
+                    <img src="./Icones/chat-preto.svg" alt="Comment">
+                    <span>0</span>
+                    <span>Comentários</span>
+                </div>
+            </div>
+            <div class="sendComment">
+                <img src="./Icones/chat-preto.svg" alt="chat">
+                <input type="text" name="Comentario" id="comentario" placeholder="Adicionar Comentário">
+                <button id="sendComment"><img src="./Icones/send.svg" alt="Enviar"></button>
+            </div>
+        </div>
+
         <div class="container">
             <div class="item img1">
                 <img src="./Imagens/Everest.jpg" alt="Monte Everest">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img2">
                 <img src="./Imagens/MonteFuji.jpg" alt="Monte Fuji">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img3">
                 <img src="./Imagens/AlpesSuiços.jpg" alt="Alpes Suíços">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img4">
                 <img src="./Imagens/GrandCanyon.jpg" alt="Grand Canyon">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img5">
                 <img src="./Imagens/MonteBranco.jpg" alt="Monte Branco">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img6">
                 <img src="./Imagens/MonteElbrus.jpg" alt="Monte Elbrus">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img7">
                 <img src="./Imagens/PicoPikes.jpg" alt="Pico Pikes">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
 
             <div class="item img8">
                 <img src="./Imagens/Huandoy.jpg" alt="Huandoy">
-                <div class="interac"></div>
-                <span>12</span>
-                <img src="./Icones/coração.svg" alt="Curtir">
-                <span>3</span>
-                <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                <div class="interac">
+                    <span>12</span>
+                    <img src="./Icones/coração.svg" alt="Curtir">
+                    <span>3</span>
+                    <img class="chat" src="./Icones/chat-branco.svg" alt="Comentários">
+                </div>
             </div>
         </div>
     </main>
