--- a/index.html
+++ b/index.html
@@ -174,5 +174,6 @@
     </footer>
 
     <script src="scripts/popUp.js"></script>
+    <script src="scripts/popUpPicture.js"></script>
 </body>
 </html>
