--- a/index.html
+++ b/index.html
@@ -175,5 +175,6 @@
 
     <script src="scripts/popUp.js"></script>
     <script src="scripts/popUpPicture.js"></script>
+    <script src="scripts/loadPage.js"></script>
 </body>
 </html>
